--- a/app/views/baits/_bait.html.erb
+++ b/app/views/baits/_bait.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_frame_tag dom_id(bait) %>
 <div class="bait">
   <%= link_to image_tag(bait.image), bait %>
   <div class="name">
@@ -18,3 +19,4 @@
     <% end %>
   <% end %>
 </div>
+<% end %>
